Bug 530822 - Move away of deprecated Class.newInstance
In favor of Class.getDeclaredConstructor().newInstance()

Change-Id: Ifb00485188f2400fde206219316653f5bdaf51ba
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>